--- a/public/about/index.html
+++ b/public/about/index.html
@@ -133,7 +133,7 @@
                 <a href="/about/about/" class="h5 d-block my-3">About Me</a>
                 <div class="mb-3"><span>By Intelligence Refinery</span> <span
                     class="border-bottom border-primary px-2 mx-1"></span>
-                  <span>Updated on October 29 2019</span></div>
+                  <span>Updated October 29 2019</span></div>
                 <p class="card-text">Welcome to Intelligence Refinery!
 This is a repository of notes and resources on data science</p>
                 <a href="/about/about/" class="btn btn-outline-primary">read more</a>
