--- a/public/amp/index.html
+++ b/public/amp/index.html
@@ -132,7 +132,7 @@
           <div class="media-body">
             <div class="mb-3"> <span
                 class="border-bottom border-primary px-2 mx-1"></span>
-              <span>Updated on Nov 06 2019</span></div>
+              <span>Updated Nov 06 2019</span></div>
             <a href="/post/resume-builder-platforms/" class="h5 d-block mb-3">Make resumes fun again</a>
             <a href="/post/resume-builder-platforms/" class="btn btn-outline-primary">read more</a>
           </div>
@@ -145,7 +145,7 @@
           <div class="media-body">
             <div class="mb-3"> <span
                 class="border-bottom border-primary px-2 mx-1"></span>
-              <span>Updated on Nov 06 2019</span></div>
+              <span>Updated Nov 06 2019</span></div>
             <a href="/post/neat-html-snippets-to-jazz-up-your-site/" class="h5 d-block mb-3">Neat HTML snippets to jazz up your site</a>
             <a href="/post/neat-html-snippets-to-jazz-up-your-site/" class="btn btn-outline-primary">read more</a>
           </div>
@@ -158,7 +158,7 @@
           <div class="media-body">
             <div class="mb-3"> <span
                 class="border-bottom border-primary px-2 mx-1"></span>
-              <span>Updated on Nov 04 2019</span></div>
+              <span>Updated Nov 04 2019</span></div>
             <a href="/post/making-python-apps/" class="h5 d-block mb-3">Going beyond Jupyter notebooks</a>
             <a href="/post/making-python-apps/" class="btn btn-outline-primary">read more</a>
           </div>
@@ -191,7 +191,7 @@
                 <a href="/post/ui-and-ux-resources/" class="h5 d-block my-3">UI and UX resources</a>
                 <div class="mb-3"><span
                     class="border-bottom border-primary px-2 mx-1"></span>
-                  <span>Updated on Nov 06 2019</span></div>
+                  <span>Updated Nov 06 2019</span></div>
                 <a href="/post/ui-and-ux-resources/" class="btn btn-outline-primary">read more</a>
               </div>
             </article>
