--- a/public/amp/index.html
+++ b/public/amp/index.html
@@ -27,8 +27,8 @@
   <link rel="stylesheet" href="/scss/style.min.css" integrity="" media="screen">
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="/images/favicon.png " type="image/x-icon">
-  <link rel="icon" href="/images/favicon.png " type="image/x-icon">
+  <link rel="shortcut icon" href="/images/favicon.jpg " type="image/x-icon">
+  <link rel="icon" href="/images/favicon.jpg " type="image/x-icon">
 
 </head><body>
 <!-- preloader start -->
@@ -133,7 +133,7 @@
             <div class="mb-3"> <span
                 class="border-bottom border-primary px-2 mx-1"></span>
               <span>Updated Nov 06 2019</span></div>
-            <a href="/post/resume-builder-platforms/" class="h5 d-block mb-3">Make resumes fun again</a>
+            <a href="/post/resume-builder-platforms/" class="h5 d-block mb-3">Make resume writing fun again</a>
             <a href="/post/resume-builder-platforms/" class="btn btn-outline-primary">read more</a>
           </div>
         </article>
