--- a/public/about/index.html
+++ b/public/about/index.html
@@ -27,8 +27,8 @@
   <link rel="stylesheet" href="/scss/style.min.css" integrity="" media="screen">
 
   <!--Favicon-->
-  <link rel="shortcut icon" href="/images/favicon.jpg " type="image/x-icon">
-  <link rel="icon" href="/images/favicon.jpg " type="image/x-icon">
+  <link rel="shortcut icon" href="/images/favicon.png " type="image/x-icon">
+  <link rel="icon" href="/images/favicon.png " type="image/x-icon">
 
 </head><body>
 <!-- preloader start -->
@@ -133,7 +133,7 @@
                 <a href="/about/about/" class="h5 d-block my-3">About Me</a>
                 <div class="mb-3"><span>By Intelligence Refinery</span> <span
                     class="border-bottom border-primary px-2 mx-1"></span>
-                  <span>Updated October 29 2019</span></div>
+                  <span>October 29 2019</span></div>
                 <p class="card-text">Welcome to Intelligence Refinery!
 This is a repository of notes and resources on data science</p>
                 <a href="/about/about/" class="btn btn-outline-primary">read more</a>
