Modified contact sheet

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -119,9 +119,13 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-10 text-center">
-        <h2>Get In Touch</h2>
+        <h2>We love to hear from you!</h2>
         <div class="content mb-4">
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea</p>
+          <p><br></p>
+
+<p>Have any comments, suggestions or questions? Feel free to send them our way!</p>
+
+<p><br></p>
 
         </div>
         <div class="row">
@@ -146,7 +150,6 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-10 text-center">
-        <h2 class="mb-4">Hi Write To Me</h2>
         <form action="https://formspree.io/mnqqqodv" method="POST" class="row">
           <div class="col-lg-6">
             <input type="text" class="form-control mb-4" id="name" name="name" placeholder="Your Name">
