Expanded 'About' page

--- a/public/about/about/index.html
+++ b/public/about/about/index.html
@@ -124,11 +124,11 @@
         <div class="content">
           <p>Welcome to Intelligence Refinery!</p>
 
-<p>We are Nancy and Mihai Chelaru-Centea, two neuroscience majors who not so long ago ditched the lab notebooks for Jupyter notebooks. With the explosion of the data science field, there is a bewildering number of articles, tutorials, Stackoverflow answers, courses and packages on the internet for anyone who cares to look. Like many other newcomers, we are navigating this ever rising sea of information, and often misinformation, with varying degrees of success each day. After having worked for some time as data scientist/developers and meeting others on the same path, we realized the importance of creating a <em>dedicated repository</em> in which we can continuously refine and grow our professional knowledge, so as to be able to keep pace with this fast moving field.</p>
+<p>We are Nancy and Mihai Chelaru-Centea, two neuroscience majors who not so long ago ditched the lab notebooks for Jupyter notebooks. With the explosion of the data science field, there is a bewildering number of articles, tutorials, Stackoverflow answers, courses and packages on the internet for anyone who cares to look. Like many other newcomers, we are navigating this ever rising sea of information, and often misinformation, with varying degrees of success each day.</p>
 
-<p>So, we rolled up our sleeves and built this site, where we try to distill everything we are learning about data science, software development, and anything else of interest into helpful nuggets for ourselves and whoever else that may stumble onto this site.</p>
+<p>After having worked for some time as data scientist/developers and meeting others on the same path, we realized the importance of creating a <em>dedicated repository</em> in which we can continuously refine and grow our professional knowledge, so as to be able to keep pace with this fast moving field. So, we rolled up our sleeves and built this site, where we try to distill everything we are learning about data science, software development, and anything else of interest into helpful nuggets for ourselves and whoever else that may stumble onto this site.</p>
 
-<p>We hope that you enjoy your time here, and would love to hear any comments or questions that you have for us!</p>
+<p>We hope that you enjoy your time here, and would love to hear any comments or questions that you have!</p>
 
         </div>
       </div>
