Removed Bootstrap style sheet from posts with floating toc

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-us"><head>
+<html lang="en-us"><link rel="stylesheet"
+      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/styles/default.min.css">
+
+<head>
   <meta charset="utf-8">
+  
   <title>Intelligence Refinery</title>
 
   <!-- mobile responsive meta -->
@@ -167,6 +171,13 @@
     </div>
   </div>
 </section>
+
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
+
+<script>
+hljs.configure({languages: []});
+hljs.initHighlightingOnLoad();
+</script>
 
 
 
