--- a/public/about/about/index.html
+++ b/public/about/about/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-us"><head>
+<html lang="en-us"><link rel="stylesheet"
+      href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/styles/default.min.css">
+
+<head>
   <meta charset="utf-8">
+  
   <title>Intelligence Refinery</title>
 
   <!-- mobile responsive meta -->
@@ -196,6 +200,13 @@
 
 
 
+
+<script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
+
+<script>
+hljs.configure({languages: []});
+hljs.initHighlightingOnLoad();
+</script>
 
 
 
