Removed author name from listings

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -129,7 +129,7 @@
               <div class="card-body px-0">
                 
                 <a href="../about/about/" class="h5 d-block my-3">About Us</a>
-                <div class="mb-3"><span>By Intelligence Refinery</span> <span
+                <div class="mb-3"><span
                     class="border-bottom border-primary px-2 mx-1"></span>
                   <span>October 29 2019</span></div>
                 <p class="card-text">Welcome to Intelligence Refinery!
@@ -222,6 +222,8 @@ We are Nancy and Mihai Chelaru-Centea, two neuroscience majors who not so long a
 
 
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/languages/r.min.js"></script>
+
 
 <script>
 hljs.configure({languages: []});
