--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -173,6 +173,8 @@
 </section>
 
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/languages/r.min.js"></script>
+
 
 <script>
 hljs.configure({languages: []});
