Add new post on Git

--- a/public/about/about/index.html
+++ b/public/about/about/index.html
@@ -243,6 +243,9 @@ hljs.initHighlightingOnLoad();
               href="../../categories/data-science-toolbox">Data science toolbox</a>
           </li>
           <li class="mb-3"><a class="text-dark"
+              href="../../categories/dev-handbook">Dev handbook</a>
+          </li>
+          <li class="mb-3"><a class="text-dark"
               href="../../categories/package-roundup">Package roundup</a>
           </li>
           <li class="mb-3"><a class="text-dark"
