--- a/public/about/index.html
+++ b/public/about/index.html
@@ -172,6 +172,9 @@ We are Nancy and Mihai Chelaru-Centea, two neuroscience majors who not so long a
                 href="../categories/data-science-toolbox">Data science toolbox</a>
             </li>
             <li><a
+                href="../categories/dev-handbook">Dev handbook</a>
+            </li>
+            <li><a
                 href="../categories/package-roundup">Package roundup</a>
             </li>
             <li><a
@@ -193,6 +196,8 @@ We are Nancy and Mihai Chelaru-Centea, two neuroscience majors who not so long a
                 href="../tags/dash">Dash</a></li>
             <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
                 href="../tags/eda">Eda</a></li>
+            <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
+                href="../tags/git">Git</a></li>
             <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
                 href="../tags/job-search">Job search</a></li>
             <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
@@ -276,6 +281,9 @@ hljs.initHighlightingOnLoad();
           </li>
           <li class="mb-3"><a class="text-dark"
               href="../categories/data-science-toolbox">Data science toolbox</a>
+          </li>
+          <li class="mb-3"><a class="text-dark"
+              href="../categories/dev-handbook">Dev handbook</a>
           </li>
           <li class="mb-3"><a class="text-dark"
               href="../categories/package-roundup">Package roundup</a>
